--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/png" href="/public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
+    <title>ANIVERSÁRIO DO ENDRY</title>
+    <meta name="description" content="Meu aniversário já está aí e você está convidado para um dia de muita diversão! Venha curtir comigo e participar desse momento tão especial! 😀" />
+
+    <meta property="og:url"                content="https://endry-convite.vercel.app/" />
+    <meta property="og:type"               content="article" />
+    <meta property="og:title"              content="ANIVERSÁRIO DO ENDRY" />
+    <meta property="og:description"        content="Meu aniversário já está aí e você está convidado para um dia de muita diversão! Venha curtir comigo e participar desse momento tão especial! 😀" />
+    <meta property="og:image"              content="https://endry-convite.vercel.app/preview.jpeg" />
+ 
+</head> 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
