--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/public/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANIVERSÁRIO DO ENDRY</title>
     <meta name="description" content="Meu aniversário já está aí e você está convidado para um dia de muita diversão! Venha curtir comigo e participar desse momento tão especial! 😀" />
