--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ANIVERSÁRIO DO ENDRY</title>
-    <meta name="description" content="Meu aniversário já está aí e você está convidado para um dia de muita diversão! Venha curtir comigo e participar desse momento tão especial! 😀" />
+    <title>Batizado do Lucas</title>
+    <meta
+      name="description"
+      content="Chegou o dia do meu batizado e papai do céu vai me abençoar. Espero voces ness dia especial. 😀"
+    />
 
-    <meta property="og:url"                content="https://endry-convite.vercel.app/" />
-    <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="ANIVERSÁRIO DO ENDRY" />
-    <meta property="og:description"        content="Meu aniversário já está aí e você está convidado para um dia de muita diversão! Venha curtir comigo e participar desse momento tão especial! 😀" />
-    <meta property="og:image"              content="https://endry-convite.vercel.app/preview.jpeg" />
- 
-</head> 
+    <meta property="og:url" content="https://endry-convite.vercel.app/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Batizado do Lucas" />
+    <meta
+      property="og:description"
+      content="Chegou o dia do meu batizado e papai do céu vai me abençoar. Espero voces ness dia especial. 😀"
+    />
+    <meta
+      property="og:image"
+      content="https://lucas-convite.vercel.app/preview.jpeg"
+    />
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
