feat: update for gabriel

--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Batizado do Lucas</title>
+    <title>Batizado & Aniversário do Gabriel</title>
     <meta
       name="description"
-      content="Chegou o dia do meu batizado e papai do céu vai me abençoar. Espero voces ness dia especial. 😀"
+      content="Tem o prazer de convidar para o Batizado e aniversário de 2 anos do Gabriel. 😀"
     />
 
-    <meta property="og:url" content="https://endry-convite.vercel.app/" />
+    <meta property="og:url" content="https://gabriel-convite.vercel.app/" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Batizado do Lucas" />
+    <meta property="og:title" content="Batizado & Aniversário do Gabriel" />
     <meta
       property="og:description"
-      content="Chegou o dia do meu batizado e papai do céu vai me abençoar. Espero voces ness dia especial. 😀"
+      content="Tem o prazer de convidar para o Batizado e aniversário de 2 anos do Gabriel. 😀"
     />
     <meta
       property="og:image"
-      content="https://lucas-convite.vercel.app/preview.jpeg"
+      content="https://gabriel-convite.vercel.app/preview.jpeg"
     />
   </head>
   <body>
